--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "bzick/smart-invoker",
-  "description": "Utility classes for invoking callables with verification of arguments and type casting",
-  "keywords": ["invoke", "call", "validation", "cast", "call_user_func", "call_user_func_array", "reflection"],
+  "name": "koda/koda",
+  "description": "Utility classes for analyse code and invoking callables with verification of arguments and type casting",
+  "keywords": ["invoke", "analyse", "call", "validation", "cast", "call_user_func", "call_user_func_array", "reflection"],
   "license": "MIT",
   "authors": [
 	{
@@ -10,7 +10,7 @@
 	}
   ],
   "require": {
-	"php": ">=5.3"
+	"php": ">=5.6"
   },
   "require-dev": {
 	"phpunit/phpunit": "*",
@@ -19,7 +19,7 @@
   },
   "autoload": {
 	"psr-0": {
-	  "SmartInvoker": "src/"
+	  "Koda": "src/"
 	}
   },
   "autoload-dev": {
