--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer install
 
 script:
-  - phpunit
+  - phpunit -c phpunit.xml.dist
 
 after_script:
   - php vendor/bin/coveralls
