--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ php:
   - 7.1
 
 before_script:
-  - composer global require satooshi/php-coveralls
-  - composer install --no-dev
+  - composer update
 
 script:
-  - phpunit -c phpunit.xml.dist
+  - vendor/bin/phpunit
 
 after_script:
   - coveralls
